<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.view.MainSignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signinbackground" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:background="@drawable/social_button_bg"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google_icon"
        android:paddingLeft="20dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpWithEmailBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/ripple_effect"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:paddingLeft="20dp"
        android:text="@string/sign_up_with_email"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/googleBtn"
        app:layout_constraintStart_toStartOf="@+id/googleBtn"
        app:layout_constraintTop_toBottomOf="@+id/googleBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sskipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/ripple_effect"
        android:text="Skip"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signInTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_in"
        android:textColor="@color/yellow"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signInTV" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>