<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".search.SearchFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_view_bg"
        android:queryHint="Search for meal here" />
    <RadioGroup
        android:id="@+id/toggle_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <ToggleButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textOff="@string/ingredients"
            android:textOn="@string/ingredients"
            android:drawableTop="@drawable/ingredient_style"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:background="@drawable/tab_item_style"/>

        <ToggleButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countries"
            android:textOff="@string/countries"
            android:textOn="@string/countries"
            android:drawableTop="@drawable/country_style"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/tab_item_style"
            />

        <ToggleButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textOff="@string/categories"
            android:textOn="@string/categories"
            android:drawableTop="@drawable/category_style"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:background="@drawable/tab_item_style"
            android:layout_weight="1"/>

    </RadioGroup>
    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        app:defaultNavHost="true"
        app:layout_insetEdge="top"

        app:navGraph="@navigation/search_nav_graph"/>

</LinearLayout>

