<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mealdetails.view.MealDetailsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="270dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/mealImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars"/>

                <TextView
                    android:id="@+id/mealName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:background="#7A050505"
                    android:gravity="center"
                    android:text="kkkkk55"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <ImageButton
                    android:id="@+id/favoriteButtonIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="top|right"
                    android:layout_margin="16dp"
                    android:background="@drawable/fav_icon_background"
                    android:padding="7dp"
                    app:tint="@color/yellow"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bookmark" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/yellow"
                android:src="@drawable/calendar"
                app:layout_anchor="@id/bottomAppBar"
                app:maxImageSize="27dp"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="13dp"
                android:layout_weight="1"
                android:text="@string/ingredients"
                android:textColor="@color/yellow"
                android:textSize="25dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/ingerdient_item" />
            <androidx.constraintlayout.widget.Barrier
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:barrierDirection="top"
                app:constraint_referenced_ids="stepsTextView" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="13dp"
                android:layout_weight="1"
                android:text="@string/steps"
                android:textColor="@color/yellow"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/stepsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/text"
                android:textSize="24sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="13dp"
                android:layout_weight="1"
                android:text="Recipe Video"
                android:textColor="@color/yellow"
                android:textSize="25dp"
                android:textStyle="bold"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:autoPlay="false"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>